<resources>
    <string name="app_name">Does it Fizz or Buzz?</string>
    <string name="check">Check</string>
    <string name="testANumber">Test a number</string>
    <string name="fizz">fizz</string>
    <string name="buzz">buzz</string>
    <string name="fizzbuzz">FIZZBUZZ!</string>
    <string name="neither">is neither fizz nor buzz</string>
    <string name="rangeCheck">FizzBuzz Range</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="to">to</string>
    <string name="generatorActivity">FizzBuzz Number Generator</string>
    <string name="rangeSumActivity">FizzBuzz Range Sum</string>
    <string name="rangeSumExplain">This one takes all the fizz, buzz, and fizzbuzz numbers in a range and adds them
    together.</string>
    <string name="empty">Empty</string>
</resources>